kubernetes/apps/default/filebrowser-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-ingress
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: filebrowser-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.168
    ports:
      - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/group: Dev

spec:
  rules:
    - host: filebrowser.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: filebrowser-ingress
                port:
                  number: 8080
  tls:
    - hosts:
        - filebrowser.${SECRET_DOMAIN}
      secretName: filebrowser-tls
  ingressClassName: nginx
